--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python3-traffictoll (0.2) focal; urgency=medium
+
+  * Removed build overrides.
+
+ -- Nate Marti <nate_marti@sil.org>  Wed, 30 Sep 2020 08:53:11 +0100
+
 python3-traffictoll (0.1) focal; urgency=medium
 
   * Initial build.
