--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python3-traffictoll (0.3) focal; urgency=medium
+
+  * Remove dependency on loguru.
+
+ -- Nate Marti <nate_marti@sil.org>  Fri, 19 Feb 2021 16:50:35 +0100
+
 python3-traffictoll (0.2) focal; urgency=medium
 
   * Removed build overrides.
